--- a/src/main/resources/templates/funding/funding-detail.html
+++ b/src/main/resources/templates/funding/funding-detail.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/static/css/font/font.css">
-    <link rel="stylesheet" href="/static/css/funding/funding-detail.css">
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="/css/font/font.css">
+    <link rel="stylesheet" href="/css/funding/funding-detail.css">
+    <link rel="stylesheet" href="/css/main/header.css">
+    <link rel="stylesheet" href="/css/main/footer.css">
+   
 </head>
-
 <body>
-    <div id="view" class="view view">
-        <header id="_header"></header>
+    <div id="view" class="view">
+        <header th:insert="~{main/header.html :: mainHeader}"></header>
         <div class="common-Layer tbb"></div>
         <div class="introBackGround hklIjO">
             <div class="introContainer">
@@ -1498,15 +1499,10 @@
             </div>
         </div>
         <div class="common-Layer tbb"></div>
-        <footer id="_footer"></footer>
+        <footer th:insert="~{main/footer.html :: mainFooter}"></footer>
     </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-<script>
-    $(document).ready(function () {
-        $("#_header").load("../main/header.html");
-        $("#_footer").load("../main/footer.html");
-    });
-</script>
-<script src="/static/js/funding/funding-detail.js"></script>
+<script src="/js/main/header.js"></script>
+<script src="/js/funding/funding-detail.js"></script>
 </html>
