--- a/src/main/resources/templates/funding/funding-payment.html
+++ b/src/main/resources/templates/funding/funding-payment.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>프로젝트 후원하기</title>
-    <link rel="stylesheet" href="/static/css/font/font.css">
-    <link rel="stylesheet" href="/static/css/funding/funding-support.css">
+    <link rel="stylesheet" href="/css/font/font.css">
+    <link rel="stylesheet" href="/css/funding/funding-support.css">
 </head>
 
 <body>
     <div id="view" class="view">
-        <div class="Header-ou4e17-0 header header">
+        <div class="Header-ou4e17-0 header">
             <div class="componentContainer logoHeader">
                 <a href="/">
                     <div class="logo logoStyle">
