--- a/src/main/resources/templates/funding/funding-result.html
+++ b/src/main/resources/templates/funding/funding-result.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>후원 완료</title>
-    <link rel="stylesheet" href="/static/css/font/font.css">
-    <link rel="stylesheet" href="/static/css/funding/funding-result.css">
+    <link rel="stylesheet" href="/css/font/font.css">
+    <link rel="stylesheet" href="/css/funding/funding-result.css">
+    <link rel="stylesheet" href="/css/main/header.css">
+    <link rel="stylesheet" href="/css/main/footer.css">
 </head>
 
 <body>
     <div id="react-view" class="view">
         <div class="header">
-            <div
-                class="componentContain logoHeader">
+            <div class="componentContain logoHeader">
                 <a href="/">
                     <div class="logo logoStyle">
                         <svg id="tumblbug_logo" viewBox="0 0 107.89 28.39">
@@ -85,18 +86,13 @@
                     </div>
                 </div>
             </div>
-            <footer id="_footer"></footer>
+            <footer th:insert="~{main/footer.html :: mainFooter}"></footer>
             
         </div>
         <div class="common-Layer tbb"></div>
     </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-<script>
-    $(document).ready(function () {
-        $("#_header").load("../main/header.html");
-        $("#_footer").load("../main/footer.html");
-    });
-</script>
+<script src="/js/main/header.js"></script>
 
 </html>
