--- a/src/main/resources/templates/funding/funding-header.html
+++ b/src/main/resources/templates/funding/funding-header.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>펀딩 개설 헤더</title>
-    <link rel="stylesheet" href="/static/css/funding/funding-header.css">
-    <link rel="stylesheet" href="/static/css/funding/funding-header-response.css">
-    <link rel="stylesheet" href="/static/css/font/font.css">
+    <link rel="stylesheet" href="/css/funding/funding-header.css">
+    <link rel="stylesheet" href="/css/funding/funding-header-response.css">
+    <link rel="stylesheet" href="/css/font/font.css">
 </head>
 <body>
-    <div class="funding-header">
+    <div class="funding-header" th:fragment="fundingHeader">
         <div class="header-wrap">
             <div class="header-container">
                 <div class="container">
@@ -41,7 +41,7 @@
                             </span>
                         </div>
                         <div class="center-menu">
-                            <img src="/static/image/logo.png" alt="" style="width: 110%;">
+                            <img src="/image/logo.png" alt="" style="width: 110%;">
                         </div>
                         <div class="right-menu">
                             <div class="header-itemImg">
