--- a/src/main/resources/templates/funding/funding-list.html
+++ b/src/main/resources/templates/funding/funding-list.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/static/css/font/font.css">
-    <link rel="stylesheet" href="/static/css/funding/funding-list.css">
-    <link rel="stylesheet" href="/static/css/funding/funding-list-response.css">
+    <link rel="stylesheet" href="/css/font/font.css">
+    <link rel="stylesheet" href="/css/funding/funding-list.css">
+    <link rel="stylesheet" href="/css/funding/funding-list-response.css">
 </head>
 
 <body>
     <!-- class : percentByRed의 width: 1~100% 빨간색바 조절 가능  -->
     <div id="view" class="view">
         <!-- header -->
-        <header id="_header"></header>
+        <header th:insert="~{main/header.html :: mainHeader}"></header>
         <div></div>
         <div class="contain">
             <div class="discover tbb">
@@ -392,19 +392,14 @@
             </div>
         </div>
         <!-- footer -->
-        <footer id="_footer">
-            </header>
+        <footer th:insert="~{main/footer.html :: mainFooter}"></footer>
+   
 
 
     </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-<script>
-    $(document).ready(function () {
-        $("#_header").load("../main/header.html");
-        $("#_footer").load("../main/footer.html");
-    });
-</script>
+<script src="/js/main/header.js"></script>
 <script>
     const $fundingState1 = parseInt($('.fundingState').text());
     const $fundingState2= $('.fundingState');
