펀딩 컨트롤러 확인완료

--- a/src/main/resources/templates/funding/funding-plan-main.html
+++ b/src/main/resources/templates/funding/funding-plan-main.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="/css/font/font.css">
     <link rel="stylesheet" href="/css/funding/funding-main.css">
     <link rel="stylesheet" href="/css/funding/funding-main-response.css">
+    <link rel="stylesheet" href="/css/funding/funding-header.css">
+    <link rel="stylesheet" href="/css/funding/funding-header-response.css">
 </head>
 
 <body>
@@ -18,7 +20,7 @@
                 <div class="content-wrap">
                     <div class="content-center">
                         <div class="content-buttonWrap"></div>
-                        <div class="content-project"">
+                        <div class="content-project">
                             <div class="content-thumbnail"></div>
                             <div>
                                 <p class="content-title"><strong>황자현의 프로젝트</strong></p>
