--- a/src/main/resources/templates/funding/funding-list.html
+++ b/src/main/resources/templates/funding/funding-list.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="/css/font/font.css">
     <link rel="stylesheet" href="/css/funding/funding-list.css">
     <link rel="stylesheet" href="/css/funding/funding-list-response.css">
+    <link rel="stylesheet" href="/css/main/header.css">
+    <link rel="stylesheet" href="/css/main/footer.css">
 </head>
 
 <body>
