검색페이지 오류수정 완료

--- a/src/main/resources/templates/volunteer-work/work-search2.html
+++ b/src/main/resources/templates/volunteer-work/work-search2.html
@@ -235,7 +235,7 @@
                 <div class="paging" style="text-align: center">
                   <a class="changePage" style="color: black"><code>&lt;</code></a>
                   <code id="currentPage" class="currentPage">1</code>
-                    <a class="changePage" style="color: black" }"=""><code>2</code></a>
+                    <a class="changePage" style="color: black"><code>2</code></a>
                   <a class="changePage" style="color: black"><code>&gt;</code></a>
                 </div>
                 <form name="pageForm">
