로그인/회원가입 화면이동

--- a/src/main/resources/templates/join-login/email-login.html
+++ b/src/main/resources/templates/join-login/email-login.html
@@ -65,13 +65,13 @@
                     <div class="join-wrap">
                         아직 심봉사 계정이 없으신가요?
                         <span class="join-text">
-                            <a href="" class="join-page">회원가입</a>
+                            <a href="/user/join-select" class="join-page">회원가입</a>
                         </span>
                     </div>
                     <div class="change-password-wrap">
                         혹시 비밀번호를 잊으셨나요?
                         <span class="change-password-text">
-                            <a href="" class="change-password-page">비밀번호 변경</a>
+                            <a href="/user/find-password" class="change-password-page">비밀번호 변경</a>
                         </span>
                     </div>
                 </div>
