--- a/src/main/resources/templates/join-login/login-select.html
+++ b/src/main/resources/templates/join-login/login-select.html
@@ -54,7 +54,7 @@
                     <div class="join-wrap">
                         아직 심봉사 계정이 없으신가요?
                         <span class="join-text">
-                            <a href="" class="join-page">회원가입</a>
+                            <a href="/user/join-select" class="join-page">회원가입</a>
                         </span>
                     </div>
                 </div>
