검색페이지 퍼블리싱 수정

--- a/src/main/resources/templates/volunteer-work/work-search2.html
+++ b/src/main/resources/templates/volunteer-work/work-search2.html
@@ -18,32 +18,12 @@
     
     <!-- 전체 div -->
     <div class="main">
-        <!-- 배너 -->
-        <!-- <div class="board-benner">
-            <div class="benner-cover"></div>
-        </div> -->
-        
+
         <!-- 중간 메인 -->
         <div>
             <div class="main-container">
-                <!-- <section class="row">
-                    <div class="row-container">
-                        <h1 class="row-text">심봉사와 함께 봉사할 심청을 찾습니다.</h1>
-                    </div>
-                </section> -->
-                <div>
-                    <!-- <select class="select-region">
-                        <option value="">전체보기</option>
-                        <option value="">서울특별시</option>
-                        <option value="">경기도</option>
-                        <option value="">충청북도</option>
-                        <option value="">충청남도</option>
-                        <option value="">경상남도</option>
-                        <option value="">경상북도</option>
-                        <option value="">전라남도</option>
-                        <option value="">전라북도</option>
-                    </select> -->
-                </div>
+<!--                <div>-->
+<!--                </div>-->
                 <section class="service-info">
                     <div class="items-info-layout">
                         <div class="items-buttons">
@@ -61,7 +41,6 @@
                             <option value="">전라남도</option>
                             <option value="">전라북도</option>
                         </select>
-                            <!-- <button type="button" class="button">지원</button> -->
                         </div>
                     </div>
                     <!--  -->
@@ -79,37 +58,12 @@
                                         <span class="dates-text">[모집기간] 2023-04-19 ~ 2023-04-30</span>
                                         <span class="dates-text-work">[봉사기간] 2023-05-01 ~ 2023-05-30</span>
                                     </div>
-                                    <!-- <div class="dates">
-                                    </div> -->
-                                </div>
-                                <div class="last-dates">
-                                     마감<br> 
-                                        <span>3</span>
-                                    일전
                                 </div>
                             </div>
                         </div>
                     </div>
                     <!--  -->
                     <div>
-                        <!-- <div class="service-items">
-                            <div class="service-items-wrapper">
-                                <div class="service-items-content">
-                                    <div class="name">심봉사(SimBongSa)</div>
-                                    <div class="title">서울시 환경정화 봉사자 모집</div>
-                                    <div class="dates">
-                                        <span class="dates-text">[모집기간] 2023-04-19 ~ 2023-04-30</span>
-                                    </div>
-                                    <div class="dates">
-                                        <span class="dates-text">[봉사기간] 2023-05-01 ~ 2023-05-30</span>
-                                    </div>
-                                </div>
-                                <div class="items-buttons">
-                                    <span class="cruit">모집중</span>
-                                    <a class="button">지원 ></a>
-                                </div>
-                            </div>
-                        </div> -->
                         <div class="service-items">
                             <div class="service-items-wrapper">
                                 <div class="service-items-content">
@@ -122,37 +76,12 @@
                                         <span class="dates-text">[모집기간] 2023-04-19 ~ 2023-04-30</span>
                                         <span class="dates-text-work">[봉사기간] 2023-05-01 ~ 2023-05-30</span>
                                     </div>
-                                    <!-- <div class="dates">
-                                    </div> -->
-                                </div>
-                                <div class="last-dates">
-                                     마감<br> 
-                                        <span>3</span>
-                                    일전
                                 </div>
                             </div>
                         </div>
                     </div>
                     <!--  -->
                     <div>
-                        <!-- <div class="service-items">
-                            <div class="service-items-wrapper">
-                                <div class="service-items-content">
-                                    <div class="name">심봉사(SimBongSa)</div>
-                                    <div class="title">서울시 환경정화 봉사자 모집</div>
-                                    <div class="dates">
-                                        <span class="dates-text">[모집기간] 2023-04-19 ~ 2023-04-30</span>
-                                    </div>
-                                    <div class="dates">
-                                        <span class="dates-text">[봉사기간] 2023-05-01 ~ 2023-05-30</span>
-                                    </div>
-                                </div>
-                                <div class="items-buttons">
-                                    <span class="cruit">모집중</span>
-                                    <a class="button">지원 ></a>
-                                </div>
-                            </div>
-                        </div> -->
                         <div class="service-items">
                             <div class="service-items-wrapper">
                                 <div class="service-items-content">
@@ -165,13 +94,6 @@
                                         <span class="dates-text">[모집기간] 2023-04-19 ~ 2023-04-30</span>
                                         <span class="dates-text-work">[봉사기간] 2023-05-01 ~ 2023-05-30</span>
                                     </div>
-                                    <!-- <div class="dates">
-                                    </div> -->
-                                </div>
-                                <div class="last-dates">
-                                     마감<br> 
-                                        <span>3</span>
-                                    일전
                                 </div>
                             </div>
                         </div>
@@ -191,13 +113,6 @@
                                         <span class="dates-text">[모집기간] 2023-04-19 ~ 2023-04-30</span>
                                         <span class="dates-text-work">[봉사기간] 2023-05-01 ~ 2023-05-30</span>
                                     </div>
-                                    <!-- <div class="dates">
-                                    </div> -->
-                                </div>
-                                <div class="last-dates">
-                                     마감<br> 
-                                        <span>3</span>
-                                    일전
                                 </div>
                             </div>
                         </div>
@@ -217,13 +132,6 @@
                                             [모집기간] 2023-04-19 ~ 2023-04-30</span>
                                         <span class="dates-text-work">[봉사기간] 2023-05-01 ~ 2023-05-30</span>
                                     </div>
-                                    <!-- <div class="dates">
-                                    </div> -->
-                                </div>
-                                <div class="last-dates">
-                                     마감<br> 
-                                        <span>3</span>
-                                    일전
                                 </div>
                             </div>
                         </div>
@@ -233,10 +141,10 @@
             </div>
             <div>
                 <div class="paging" style="text-align: center">
-                  <a class="changePage" style="color: black"><code>&lt;</code></a>
+                  <a class="changePrev" style="color: black"><code>&lt;</code></a>
                   <code id="currentPage" class="currentPage">1</code>
                     <a class="changePage" style="color: black"><code>2</code></a>
-                  <a class="changePage" style="color: black"><code>&gt;</code></a>
+                  <a class="changeNext" style="color: black"><code>&gt;</code></a>
                 </div>
                 <form name="pageForm">
                   <input type="hidden">
